fix header spacing

--- a/css/main.css
+++ b/css/main.css
@@ -278,7 +278,7 @@ ul#nav li.active a { color: #FDD7B3; }
 /*=====Hero Top=====*/
 .masthead{
 	position:relative;
-	padding:270px 0px;
+	padding:200px 0px;
 	color:#FFF;
 	text-align:center;
 	text-shadow:0 1px 0 rgba(0,0,0,.1);
